reverted svg underline (issues on mobile)

--- a/src/globals.css
+++ b/src/globals.css
@@ -24,31 +24,3 @@
   --color-muted: var(--muted);
   --font-sans: var(--font-space-grotesk);
 }
-
-strong {
-  position: relative;
-
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: -0.125rem;
-    left: -0.5rem;
-    right: -0.5rem;
-    height: 0.75rem;
-    z-index: -1;
-
-    background-image: url("/angry-underline.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-}
-
-p > strong {
-  font-weight: 400;
-  &::after {
-    bottom: -0.2rem;
-    height: 0.5rem;
-    left: -0.25rem;
-    right: -0.25rem;
-  }
-}
